hoping this fixes the icon bar color on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,6 +10,9 @@ $black: #000000;
 	color: black;
 }
 
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: black;
+}
 
 #spacer {
   padding-top: 8%;
